# rust-server-for-multiplayer

./: .gitignore  Cargo.toml  README.md  build-debug.bat  build-release.bat  run-release.bat  run.bat
assets/: index.html  styles.css
assets/js/: script.js  sfu-client.js  webrtc-sfu.js  ws-sfu.js
assets/webui/: debug-tool.html
assets/webui/js/: script.js  webrtc-sfu.js  ws-sfu.js
cnf/: unity-rust-sfu.service  unity-rust-sfu.toml  webrtc-sfu.service
libs/libwish/: Cargo.toml
libs/libwish/src/: lib.rs
libs/libws/: Cargo.toml
libs/libws/src/: lib.rs
libs/signal/: Cargo.toml
libs/signal/src/: lib.rs
libs/utils/: Cargo.toml
libs/utils/src/: http.rs  lib.rs  unique.rs
src/: config.rs  constant.rs  error.rs  main.rs  metrics.rs  room.rs
src/forward/rtc/: client.rs  internal.rs  message.rs  mod.rs  publish.rs  subscribe.rs  track.rs
src/http/: mod.rs  response.rs
src/route/: mod.rs  static.rs
src/route/room/: create.rs  delete.rs  exit.rs  join.rs  mod.rs  room.rs
src/route/rtc/: infos.rs  mod.rs  stream.rs  vhost.rs  whep.rs  whip.rs
src/route/ws/: mod.rs  whep.rs
src/rtc/: convert.rs  mod.rs
